# Farm-manager

./: .gitignore  MANIFEST.in  README.md  flock_feature_prompt.md  laborer_kinyarwanda_translation_sheet.csv  license.txt  package.json  pyproject.toml  render.yaml  requirements.txt
.cursor/plans/: modern_ui_overhaul_plan_5539414e.plan.md
agricultural-module/styles/: institutional-tables.css
data/: breed_standards.json
database/migrations/: 000_app_users_prerequisite.sql  001_poultry_extensions_and_enums.sql  001b_public_users_table.sql  002_poultry_rbac.sql  003_poultry_flocks.sql  004_poultry_daily_logs.sql  005_poultry_health_inventory_sales.sql  006_poultry_financing_bridge.sql  007_poultry_prescriptions_biosecurity.sql  010_checkin_photos.sql  011_log_schedule.sql  012_payroll_impact.sql  (+39 more)
docs/: ERPNEXT_OUTBOUND_CONTRACT.md  INTEGRATION.md  PRODUCTION_CONNECT_NEXT_STEPS.md  architecture.md  clevafarm-entity-registry.json  cutover.md  deployment.md  local_bench_setup.md  migration.md  post_cutover_validation.md
farm_manager/: api.py  boot.py  hooks.py  install.py  modules.txt  patches.txt
scripts/: backfill-clevafarm-sync.js  backfill-migration-map.js  bootstrap_ubuntu_mariadb_for_frappe.sh  diff-clevafarm-registry.js  export-clevafarm-registry.js  finish_bench_site.sh  print-clevafarm-prod-setup.sh  run-prod-backfill.sh
server/: .env.example  migrate.js  package-lock.json  package.json  pgConnFromUrl.js  server.js  systemConfig.js
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
(+342 files in other folders)
