[project]
name = "farm_manager"
authors = [
    { name = "Farm Manager", email = "admin@farmmanager.local" }
]
description = "Native ERPNext app for poultry / farm operations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904",
    "E101", "E402", "E501", "E741",
    "F401", "F403", "F405", "F722",
    "W191", "RUF001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
